Edited font source

--- a/index.html
+++ b/index.html
@@ -119,7 +119,16 @@
             <style>
                 @font-face {
                     font-family: 'Portcullion-Bold';
-                    src: local('Portcullion-Bold'), local('Portcullion');
+                    src: url('Portcullion.ttf') format('truetype');
+                    font-weight: 700;
+                    font-style: normal;
+                }
+
+                @font-face {
+                    font-family: 'Portcullion';
+                    src: url('Portcullion.ttf') format('truetype');
+                    font-weight: normal;
+                    font-style: normal;
                 }
             </style>
             <filter id="ink-bleed">
