--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papirotheque Animation</title>
+    <title>Papirothéque</title>
     <style>
         :root {
             --bg-color: #f0ebe5;
@@ -169,5 +169,6 @@
         </a>
     </svg>
 </body>
+
 
 </html>
