--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papirothéque</title>
+    <title>Papirothèque</title>
     <style>
         :root {
             --bg-color: #f0ebe5;
@@ -172,3 +172,4 @@
 
 
 </html>
+
