--- a/index.html
+++ b/index.html
@@ -1,136 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papirothéque</title>
-    <style>
-        :root {
-            --bg-color: #f0ebe5;
-            --ink-color: #2b2b2b;
-            --accent-color: #8a3428;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: var(--bg-color);
-            margin: 0;
-            overflow: hidden;
-            background-image: radial-gradient(circle at center, transparent 0%, rgba(0, 0, 0, 0.08) 100%);
-        }
-
-        body::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.04;
-            pointer-events: none;
-            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-        }
-
-        .papirotheque-svg {
-            filter: url(#ink-bleed);
-            max-width: 90vw;
-            max-height: 80vh;
-        }
-
-        .papirotheque-svg text {
-            stroke: none;
-            fill: var(--ink-color);
-            transition: fill 0.3s ease;
-        }
-
-        .papirotheque-svg tspan {
-            stroke: none;
-            fill: inherit;
-        }
-
-        .link-group {
-            cursor: pointer;
-            transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
-            transform-origin: center;
-            animation: intro-float 1.5s ease-out backwards;
-        }
-
-        .theque-group {
-            animation-delay: 0.2s;
-        }
-
-        .link-group:hover {
-            transform: scale(1.05) translateY(-10px);
-            z-index: 10;
-        }
-
-        .link-group:hover text {
-            fill: #111;
-        }
-
-        .label {
-            opacity: 0.25;
-            fill: var(--ink-color);
-            font-family: 'Courier New', Courier, monospace;
-            font-weight: normal;
-            font-size: 160px;
-            letter-spacing: 20px;
-            pointer-events: none;
-            clip-path: inset(0 0 0 0);
-            transition: opacity 0.3s ease;
-        }
-
-        .link-group:hover .label {
-            opacity: 1;
-            animation: none;
-            animation: typewriter 0.6s steps(15, end) forwards;
-            clip-path: inset(0 100% 0 0);
-        }
-
-        @keyframes typewriter {
-            to {
-                clip-path: inset(0 -20% 0 0);
-            }
-        }
-
-        @keyframes intro-float {
-            0% {
-                transform: translateY(50px);
-                opacity: 0;
-            }
-
-            100% {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-    </style>
+    <title>Papirotheque Animation</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <svg class="papirotheque-svg" width="100%" height="auto" viewBox="-500 0 7267 2000" version="1.1"
-        style="overflow: visible;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
-            <style>
-                @font-face {
-                    font-family: 'Portcullion-Bold';
-                    src: url('Portcullion.ttf') format('truetype');
-                    font-weight: 700;
-                    font-style: normal;
-                }
 
-                @font-face {
-                    font-family: 'Portcullion';
-                    src: url('Portcullion.ttf') format('truetype');
-                    font-weight: normal;
-                    font-style: normal;
-                }
-            </style>
             <filter id="ink-bleed">
                 <feTurbulence type="fractalNoise" baseFrequency="0.02" numOctaves="3" result="noise" />
                 <feDisplacementMap in="SourceGraphic" in2="noise" scale="5" />
@@ -139,36 +21,32 @@
         </defs>
 
         <a href="https://papiro.space/blog/" class="link-group papiro-group">
+            <rect class="hitbox" x="-500" y="0" width="3900" height="2000" />
             <g transform="matrix(4.166667,0,0,4.166667,-1695.885079,-715.723907)">
-                <text x="423.788px" y="446.219px"
-                    style="font-family:'Portcullion-Bold', 'Portcullion';font-weight:700;font-size:288px;">P<tspan
-                        x="617.324px 746.06px " y="446.219px 446.219px ">ap</tspan>i</text>
-                <text x="950.54px" y="446.219px"
-                    style="font-family:'Portcullion-Bold', 'Portcullion';font-weight:700;font-size:200px;">R</text>
-                <text x="1082.94px" y="446.219px"
-                    style="font-family:'Portcullion-Bold', 'Portcullion';font-weight:700;font-size:288px;">o<tspan
-                        visibility="hidden">theque</tspan></text>
+                <text x="423.788px" y="446.219px" class="svg-text fs-288">P<tspan x="617.324px 746.06px "
+                        y="446.219px 446.219px ">ap</tspan>i</text>
+                <text x="950.54px" y="446.219px" class="svg-text fs-200">R</text>
+                <text x="1082.94px" y="446.219px" class="svg-text fs-288">o<tspan visibility="hidden">theque</tspan>
+                </text>
             </g>
             <text class="label" x="2000" y="1800" text-anchor="middle" font-family="sans-serif" font-size="200"
                 fill="#000">PORTFOLIO</text>
         </a>
 
         <a href="https://github.com/papirotheque" class="link-group theque-group">
+            <rect class="hitbox" x="3400" y="0" width="3800" height="2000" />
             <g transform="matrix(4.166667,0,0,4.166667,-1695.885079,-715.723907)">
-                <text x="1082.94px" y="446.219px"
-                    style="font-family:'Portcullion-Bold', 'Portcullion';font-weight:700;font-size:288px;">
+                <text x="1082.94px" y="446.219px" class="svg-text fs-288">
                     <tspan visibility="hidden">o</tspan>theque
                 </text>
             </g>
             <g transform="matrix(0,-1,1,0,500.595873,4890.036705)">
-                <text x="4424.046px" y="4053.967px"
-                    style="font-family:'Portcullion-Bold', 'Portcullion';font-weight:700;font-size:1200px;">,</text>
+                <text x="4424.046px" y="4053.967px" class="svg-text fs-1200">,</text>
             </g>
             <text class="label" x="4500" y="1800" text-anchor="middle" font-family="sans-serif" font-size="200"
                 fill="#000">GITHUB</text>
         </a>
     </svg>
 </body>
-
 
 </html>
